<resources>
    <string name="app_name">Another todo</string>
    <string name="notebook">Notebook</string>
    <string name="note_title">Title</string>
    <string name="note_text">Text</string>
    <string name="task_text">Task text</string>
    <string name="note_modified_at">Modified at</string>
    <string name="main_window">Notes</string>
    <string name="navigation">Navigation</string>
    <string name="open_navigation">Open navigation drawer</string>
    <string name="close_navigation">Close navigation drawer</string>
    <string name="favourite">Favourites</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <integer-array name="android_drawablew_colors">
        <item>@drawable/ic_choose_color_blue</item>
        <item>@drawable/ic_choose_color_purple</item>
        <item>@drawable/ic_choose_color_orange</item>
        <item>@drawable/ic_choose_color_red</item>
        <item>@drawable/ic_choose_color_green</item>
    </integer-array>

    <integer-array name="android_colors">
        <item>@color/blue</item>
        <item>@color/purple</item>
        <item>@color/orange</item>
        <item>@color/red</item>
        <item>@color/green</item>
    </integer-array>

</resources>