<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/note_element"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_base_1x">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_base_1x"
        android:freezesText="true"
        android:gravity="center|top"
        android:text="@string/note_title"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/note_images_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/note_tasks_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_base_2x"
        android:gravity="top|start"
        android:text="@string/note_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/note_modified_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="viewEnd"
            android:text="@string/note_modified_at"/>
    </LinearLayout>
</LinearLayout>