<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/note_card_view">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/note_hashcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="#0"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_base_1x"
                android:freezesText="true"
                android:gravity="center|top"
                android:text="@string/note_title"
                android:textSize="@dimen/note_title_size"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/note_images_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/note_tasks_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/note_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_base_2x"
            android:gravity="center_horizontal|top"
            android:text="@string/note_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/note_modified_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/note_modified_at"
            android:textAlignment="viewEnd"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>