<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/note_hashcode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="#0" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_base_1x"
            android:freezesText="true"
            android:gravity="center|top"
            android:hint="@string/note_title"
            android:text="@string/note_title"
            android:textSize="@dimen/note_title_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/note_images_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:id="@+id/note_tasks_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/note_task_add_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/note_task_add_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/note_task_add_hint"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="Add task..."
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/note_task_add_button"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_base_2x"
        android:background="@null"
        android:gravity="center_horizontal|top"
        android:hint="Write your wishes here"
        android:minLines="3"
        android:singleLine="false"
        android:text="@string/note_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/note_modified_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:editable="false"
        android:text="@string/note_modified_at"
        android:textAlignment="viewEnd"
        android:textSize="12sp" />
</LinearLayout>